--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,12 @@ footer{
 .menuSections {
   margin: 1rem 0;
 }
+.mySections .card {
+  margin: 0 auto;
+}
+.radioLabels {
+  margin-left: 5px;
+}
 
 @media screen and (max-width: 768px) {
   .footerLastSection{
