--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,6 @@ footer{
   text-align: right;
 }
 .description{
-  background-color: #343a40;
-  color: white;
   text-align: justify;
   padding: 15px;
 }
@@ -52,6 +50,17 @@ footer{
 }
 .radioLabels {
   margin-left: 5px;
+}
+div#home .card-header {
+  background: none;
+  border: none;
+  padding: 0;
+  margin-bottom: 10px;
+}
+div#home .card {
+  padding: 15px;
+  background: none;
+  border: none;
 }
 
 @media screen and (max-width: 768px) {
