--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,17 @@ div#home .card {
   background: none;
   border: none;
 }
+.like-btn-container {
+  display: inline-block;
+  float: right;
+}
+.myHeart svg {
+  width: 26px;
+  cursor: pointer;
+}
+.myHeart svg path {
+  color: red;
+}
 
 @media screen and (max-width: 768px) {
   .footerLastSection{
